tests/invalid/import_nonexistent_file.ar
import "nonexistentfile!@#$4.ar";

fn main() { }

//! 1:8: error: cannot read source file `tests/invalid/nonexistentfile!@#$4.ar`
